v1.6.14 (11/05/2020)
- XChemDeposit: do not add ligand cif to model mmcif because Buster does already include it

v1.6.13 (10/05/2020)
- XChemDeposit: use RefinementMMCIFmodel_latest (if available) instead of refine.split.bound-state.pdb

v1.6.12 (09/05/2020)
- capture refinement mmcif file location in DB after refinement (if available)

v1.6.11 (04/05/2020) 
- added giant.score_model after buster refinement
- added field and capture of path to buster-reports in DB

v1.6.10 (04/05/2020) 
- bug fix: only read (2)fofc_twin.map during dimple_twin map review

v1.6.9 (04/05/2020) 
- added COOT command to open dimple_twin maps

v1.6.8 (30/04/2020) 
- enable html export of '4 - CompChem ready' structures only 

v1.6.7 (29/04/2020)
- initial twin refinement with dimple in separate folder and additional fields in XChemDB

v1.6.6 (28/04/2020)
- bug fix: NameError in XChemRefine

v1.6.5 (28/04/2020)
- more verbose error messages in buster refine module

v1.6.4 (28/04/2020)
- added validation with buster-reports after refinement with buster

v1.6.3 (25/04/2020) 
- grade will use mogul for restraints generation if program available 

v1.6.2 (24/04/2020)
- restraints generation: use program name in script name for easier trouble-shooting
- assign_stereochemistry.py option removed from restraints generation

v1.6.1 (17/04/2020)
- added 7 - Analysed & Rejected' to refinement table combobox

v1.6.0 (14/04/2020)
- new option: directly refine bound-state only after pandda.inspect with buster

v1.5.17 (07/04/2020)
- add option to specify $SampleID in structure deposition title

v1.5.16 (06/04/2020)
- XChemThread: copy un-merged MTZ file for xia2, dials & 3d(ii)
- XChemThread: change parsing of auto-processing results to enable reading of multiple runs with same name, e.g. xia-3dii
- bug fix: enable 3dii only selection of auto-processing results
- remove xia2-3d only auto-processing selection option

v1.5.15 (06/04/2020)